k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: server-nodeport
              servicePort: 8080
